--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
 줄바꿈::
 줄바꿈::
 ===
-	<h4 class='text-center'><b class='colyel churchname'> </b> 온라인 기도실</h4>
-					<h6 class='text-center'>에스더의 기도</h6>
+	<h4 class='text-center'><b class='colyel churchname'> </b> 2020년 솔틴드림기도회</h4>
+					<h6 class='text-center'>어머니의 기도</h6>
 					
 ---
 
@@ -86,21 +86,22 @@
 <div class='maincard clearfix'  data-bg='http://pgsixt.github.io/10/worship1.jpg'>
 줄바꿈::
 
-제목::[찬양], [[마음을 열며]]
+제목::[찬양], [[누구나 삶의 시작은 작구나]
 ===
 설명*::찬양의 가사를 천천히 읽어 봅시다.
 ---
 줄바꿈::
-중간본문::주님 말씀하시면 
-중간본문::내가 나아가리다
+중간본문::누구나 삶의 시작은 작구나
+중간본문::작은 시작은 그 소리조차 없구나
+중간본문::소리 없는 삶을 몰라하는 이들
+중간본문::그들도 삶의 시작은 작구나
 줄바꿈::
-중간본문::주님 뜻이 아니면
-중간본문::내가 멈춰서리다
+중간본문::높이 떴을 때 더욱 작아지는 해처럼
+중간본문::깊이 잠길 때 더욱 소리 없는 바다처럼 
+중간본문::작은 친구야 소리 없는 벗들아
+중간본문:: 높게 살자 깊게 사랑하자
 줄바꿈::
-중간본문::나의 가고 서는것
-중간본문:: 주님 뜻에 있으니
-줄바꿈::
-가운데중간본문::[오 주님 나를 이끄소서]
+가운데중간본문::[누구나 삶의 시작은 작구나]
 줄바꿈::
 
 다음버튼::다음
@@ -109,19 +110,16 @@
 <div class='maincard clearfix'  data-bg='http://pgsixt.github.io/10/worship1.jpg'>
 줄바꿈::
 
-중간본문::뜻하신 그곳에 나 있기 원합니다
+중간본문::지금도 우리 시작은 작구나
 
 줄바꿈::
-중간본문::이끄시는 대로 순종하며 살리니
-중간본문::연약한 내 영혼 통하여 일하소서
+중간본문::작은 외침을 듣는 이도 적구나
+중간본문::적은 무리됨을 기뻐하는 이들
+가운데중간본문::[그들과 우리 시작은 작구나]
 줄바꿈::
-중간본문::주님 나라와 그 뜻을 위하여
-줄바꿈::
-가운데중간본문::[오 주님 나를 이끄소서]
-줄바꿈::
-오른쪽작은본문::- 주님 말씀하시면, 노래 골방라이브
+오른쪽작은본문::- 누구나 삶의 시작은 작구나, 노래 한웅재
 ---
-유튜브::1MUNTxfOjBk
+유튜브::5kpRRBCO73E
 줄바꿈::
 
 <button type="submit"   class="btn btn-warning btn_next float-right" name="button" id='btn_4' data-kill='#if1' onclick='aup.play();' >다음</button>
