--- a/index.html
+++ b/index.html
@@ -129,23 +129,20 @@
 
 
 
-제목::[말씀], [[우리의 시선을 두고]]
+제목::[말씀], [[감사드림]]
 ---
 설명*::말씀을 천천히 여러 번 읽습니다.
 ---
-중간본문::13 모르드개가 [[그를 시켜]] 에스더에게 [[회답하되 ]]
+중간본문::3 자식은주께서주신 [[선물이요]] 태 안에 들어 있는 열매는 주님이 주신 보상이다.
 줄바꿈::
-중간본문::너는 왕궁에 있으니 모든 유다인 중에 홀로 [목숨을 건지리라] 생각하지 말라
+중간본문::4 젊어서 낳은 자식은 용사의 손에 쥐어 있는 [화살과도 같으니]
 줄바꿈::
-중간본문::14 이 때에 네가 만일 잠잠하여 말이 없으면 
-중간본문::유다인은 다른 데로 말미암아 놓임과 구원을 얻으려니와 
-오른쪽중간본문::너와 네 아버지 집은 멸망하리라 
-줄바꿈::
-중간본문::네가 왕후의 자리를 얻은 것이 
-가운데중간본문::[이 때를 위함]이 아닌지 누가 알겠느냐 [[하니]]
+중간본문::5 그런 화살이 화살통에 가득한 용사에게는 복이 있다. 
+중간본문::그들은 성문에서 원수들과 담판할 때에, 
+가운데중간본문::[부끄러움]을 당하지 [[아니할 것이다.]]
 
 
-가운데작은본문::-  에스더4:13-14
+가운데작은본문::-  시편127:1-5(새번역)
 다음버튼::계속
 
 </div>
