--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 줄바꿈::
 ===
 	<h4 class='text-center'><b class='colyel churchname'> </b> 2020년 솔틴드림기도회</h4>
-					<h6 class='text-center'>어머니의 기도</h6>
+					<h6 class='text-center'>세상의 소금 </h6>
 					
 ---
 
@@ -129,7 +129,7 @@
 
 
 
-제목::[말씀], [[감사드림]]
+제목::[첫 번째 기도], [[감사드림]]
 ---
 설명*::말씀을 천천히 여러 번 읽습니다.
 ---
@@ -152,7 +152,7 @@
 
 
  
-제목::[말씀], [[우리의 시선을 두고]]
+제목::[말씀], [[회개드림]]
 ===
 설명*::말씀을 천천히 여러 번 읽습니다.
 ---
