--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 줄바꿈::
 ===
 	<h4 class='text-center'><b class='colyel churchname'> </b> 2020년 솔틴드림기도회</h4>
-					<h6 class='text-center'>세상의 소금 </h6>
+					<h6 class='text-center'>세상의 소금 염산교회 </h6>
 					
 ---
 
@@ -133,18 +133,42 @@
 ---
 설명*::말씀을 천천히 여러 번 읽습니다.
 ---
-중간본문::3 자식은주께서주신 [[선물이요]] 태 안에 들어 있는 열매는 주님이 주신 보상이다.
+중간본문::3 자식은 주께서 주신 [선물이요] 
+중간본문::3 태 안에 들어 있는 열매는 주님이 주신 보상이다.
 줄바꿈::
 중간본문::4 젊어서 낳은 자식은 용사의 손에 쥐어 있는 [화살과도 같으니]
-줄바꿈::
 중간본문::5 그런 화살이 화살통에 가득한 용사에게는 복이 있다. 
+줄바꿈::
 중간본문::그들은 성문에서 원수들과 담판할 때에, 
+줄바꿈::
 가운데중간본문::[부끄러움]을 당하지 [[아니할 것이다.]]
 
 
 가운데작은본문::-  시편127:1-5(새번역)
 다음버튼::계속
 
+	
+	 </div>
+<div class='maincard clearfix'  data-bg='http://pgsixt.github.io/10/readingbook.jpg'>
+
+
+제목::[첫 번째 기도], [[감사드림]]
+---
+설명*::기도문을 따라 읽습니다.(개인적으로 기도를 하셔도 좋습니다.)
+---
+중간본문:: 하나님께서 우리에게 선물로 자녀를 주시고, 맡겨주셔서 감사드립니다. 
+중간본문:: 태어나서 지금까지 보호해주시고, 지금까지 인도하셨으며,
+줄바꿈::
+중간본문:: 12년 간의 학교생활을 통해 독립된 한 사람으로
+중간본문:: 살아갈 수 있는 준비를 하게 하심에 감사합니다. 
+줄바꿈::
+중간본문:: 이제 한 주체적인 사람으로서 선택을 하고 책임을 지는 성인이 되는 것에
+줄바꿈::
+가운데중간본문::[감사]를 [[드립니다.]]
+
+
+가운데작은본문:: 자녀를 주신 하나님께 감사합니다.
+다음버튼::계속
 </div>
 <div class='maincard clearfix'  data-bg='http://pgsixt.github.io/10/readingbook.jpg'>
 
