--- a/index.html
+++ b/index.html
@@ -134,14 +134,14 @@
 설명*::말씀을 천천히 여러 번 읽습니다.
 ---
 중간본문::3 자식은 주께서 주신 [선물이요] 
-중간본문::3 태 안에 들어 있는 열매는 주님이 주신 보상이다.
+중간본문:: 태 안에 들어 있는 열매는 주님이 주신 보상이다.
 줄바꿈::
 중간본문::4 젊어서 낳은 자식은 용사의 손에 쥐어 있는 [화살과도 같으니]
 중간본문::5 그런 화살이 화살통에 가득한 용사에게는 복이 있다. 
 줄바꿈::
-중간본문::그들은 성문에서 원수들과 담판할 때에, 
+중간본문:: 그들은 성문에서 원수들과 담판할 때에, 
 줄바꿈::
-가운데중간본문::[부끄러움]을 당하지 [[아니할 것이다.]]
+가운데중간본문::[부끄러움]을 당하지 [아니할 것이다.]
 
 
 가운데작은본문::-  시편127:1-5(새번역)
@@ -164,7 +164,7 @@
 줄바꿈::
 중간본문:: 이제 한 주체적인 사람으로서 선택을 하고 책임을 지는 성인이 되는 것에
 줄바꿈::
-가운데중간본문::[감사]를 [[드립니다.]]
+가운데중간본문::[감사]를 [드립니다.]
 
 
 가운데작은본문:: 자녀를 주신 하나님께 감사합니다.
@@ -181,15 +181,17 @@
 설명*::말씀을 천천히 여러 번 읽습니다.
 ---
 
-중간본문::15 에스더가 모르드개에게 [[회답하여 이르되]]
+중간본문::2 주께서는 못 하시는 일이 없으시다는 것을, [이제]저는 알았습니다.
+중간본문::주님의 계획은 어김없이 이루어진다는 것도, 저는 [깨달았습니다.]
 줄바꿈::
-
-중간본문:: 16 당신은 가서 수산에 있는 유다인을 다 모으고 나를 위하여 금식하되 밤낮 삼 일을 먹지도 말고 마시지도 마소서 
+중간본문::3 잘 알지도 못하면서, 감히 주님의 뜻을 흐려 놓으려 한 자가 바로 저입니다.
+중간본문:: 깨닫지도 못하면서, 함부로 말을 하였습니다. 제가 알기에는, 너무나 신기한 일들이었습니다.
 줄바꿈::
-중간본문::나도 나의 시녀와 [더불어 이렇게 금식한 후에] 규례를 어기고 왕에게 나아가리니 
+중간본문::4 주께서 말씀하셨습니다. "들어라. 내가 말하겠다. 내가 물을 터이니, 내게 대답하여라" 하셨습니다. 
+중간본문::5 주님이 어떤 분이시라는 것을, 지금까지는 제가 귀로만 들었습니다. 그러나 이제는 제가 제 눈으로 주님을 뵙습니다.
 줄바꿈::
-가운데중간본문::[죽으면 죽으리이다] [[하니라]]
-가운데작은본문::-  에스더4:15-16
+가운데중간본문::[그러므로 저는 제 주장을 거두어 들이고] [[티끌과 잿더미 위에 앉아서 회개합니다.]]
+가운데작은본문::-  욥기42:2-6(새번역)
 다음버튼::아멘
 
 </div>
