--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
 
 
 가운데작은본문:: 자녀를 주신 하나님께 감사합니다.
-다음버튼::계속
+다음버튼::아멘
 </div>
 <div class='maincard clearfix'  data-bg='http://pgsixt.github.io/10/readingbook.jpg'>
 
@@ -176,7 +176,7 @@
 
 
  
-제목::[말씀], [[회개드림]]
+제목::[두 번째 기도], [[회개드림]]
 ===
 설명*::말씀을 천천히 여러 번 읽습니다.
 ---
@@ -194,6 +194,29 @@
 가운데작은본문::-  욥기42:2-6(새번역)
 다음버튼::아멘
 
+	 </div>
+<div class='maincard clearfix'  data-bg='http://pgsixt.github.io/10/readingbook.jpg'>
+
+
+제목::[두 번째 기도], [[회개드림]]
+---
+설명*::기도문을 따라 읽습니다.(개인적으로 기도를 하셔도 좋습니다.)
+---
+중간본문:: 맡겨주신 자녀를 주님의 교훈과 훈계로 양육하는 일에 부족하고 게을렀습니다. 
+중간본문:: 또한 공부와 성적, 대학과 출세를 하나님보다 중요한 것으로 우상 삼았던 모습을 회개합니다.
+줄바꿈::
+중간본문:: 나의 욕심으로 자녀를 휘둘렀음을, 
+중간본문:: 변화되지 못한 언행으로 자녀에게 믿음의 본을 보여주지 못한 것을 회개합니다. 
+줄바꿈::
+중간본문:: 믿음의 눈으로 세상을 바라보지 못해 자녀에게 불안과 두려움을 전해준 것에 대해
+줄바꿈::
+가운데중간본문::[회개] [합니다.]
+
+
+가운데작은본문:: 주님께 돌아서겠습니다.
+다음버튼::아멘
+	
+	
 </div>
 <div class='maincard clearfix' data-bg='http://pgsixt.github.io/10/room2.jpg'>
 제목::[홀로] [[목숨을 건지리라]]
