--- a/index.html
+++ b/index.html
@@ -192,9 +192,9 @@
 줄바꿈::
 가운데중간본문::[그러므로 저는 제 주장을 거두어 들이고] [[티끌과 잿더미 위에 앉아서 회개합니다.]]
 가운데작은본문::-  욥기42:2-6(새번역)
-다음버튼::아멘
+다음버튼::계속
 
-	 </div>
+</div>
 <div class='maincard clearfix'  data-bg='http://pgsixt.github.io/10/readingbook.jpg'>
 
 
@@ -219,115 +219,96 @@
 	
 </div>
 <div class='maincard clearfix' data-bg='http://pgsixt.github.io/10/room2.jpg'>
-제목::[홀로] [[목숨을 건지리라]]
+제목::[세 번째 기도] [[신뢰드림]]
 ===
-설명*::말씀을 새기며 기도합니다.
-설명*::기도는 [자기중심성]을 벗어날 때, 혼잣말이 아니라 대화가 됩니다.
+설명*::말씀을 새기며 여러번 읽습니다.
 ---
 
-중간본문::유다인이 위기에 처했고, 왕궁에 있는 에스더도 마찬가지입니다.
+중간본문::4 다윗과 그의 부하들은 목놓아 울었다. 모두들 더이상 울 힘이 없어 지칠 때까지 울었다.
 
 줄바꿈:: 
 
-중간본문::재난 속에서 각자의 평안과 안녕에만 초점을 맞추며 자신은 예외라고 생각합니다. 그러나 모르드개는 그렇게 [생각하지 말라]고 합니다.
+중간본문::5 다윗의 두 아내인 이스르엘 여인 아히노암과 나발의 아내였던 갈멜 여인 아비가일도 사로잡혀갔다.
 
 줄바꿈::
 
-중간본문::[나만 예외]라는 생각을 버리게 하시고, 지체들의 고통을 알게 하소서. 
+중간본문::6 군인들이 저마다 아들 딸들을 잃고 마음이 아파서, 다윗을 돌로 치자고 말할 정도였으니, 다윗은 큰 곤경에 빠졌다. 
 줄바꿈::
 
-가운데작은본문::[수험생, 취업, 결혼, 자녀, 환우]
+가운데중간본문::그러나 다윗은 자기가 믿는 주 하나님을 [더욱 굳게 의지하였다.]
+가운데작은본문::-  사무엘상30:4-6(새번역)
+다음버튼::계속
 
-다음버튼::다음
+</div>
+<div class='maincard clearfix'  data-bg='http://pgsixt.github.io/10/readingbook.jpg'>
 
+
+제목::[세 번째 기도], [[신뢰드림]]
+---
+설명*::기도문을 따라 읽습니다.(개인적으로 기도를 하셔도 좋습니다.)
+---
+중간본문::부족함을 선으로 바꾸시는 하나님을 신뢰합니다. 자녀를 향한 약속을 이루어가실 하나님을 믿습니다. 
+중간본문::부모의 연약함이 남긴 상처를 하나님께서 치유하심을 믿고, 부모의 부족함이 채워주지 못한 것을
+중간본문::다른 사람들과 통로들을 통해 채우셨음을 믿습니다.
+중간본문::자녀들을 이 땅에 보내실 때 주셨던 뜻과 비전을 끝까지 이루어가시는 하나님을 신뢰하며 
+줄바꿈::
+중간본문::하나님만이 자녀의 온전한 부모가 되심을
+줄바꿈::
+가운데중간본문::[신뢰] [합니다.]
+
+
+가운데작은본문:: 주님을 신뢰하겠습니다.
+다음버튼::아멘
+
+	
+	
 </div>
 <div class='maincard clearfix'  data-bg='http://pgsixt.github.io/10/clock1.jpg'>
 
 
-제목::[이 때를] [[위함이 아닌지]]
+제목::[네 번째 기도] [[소망드림]]
 ===
-설명*::말씀을 새기며 기도합니다.
+설명*::말씀을 새기며 여러번 읽습니다.
 ---
-중간본문:: 모르드개는 에스더에게 [이 때를 위함이 아닌지] 묻습니다.
+중간본문:: 5 나의 영혼아 잠잠히 하나님만 바라라 무릇 나의 [소망]이 그로부터 나오는도다
 줄바꿈::
 
-중간본문::하나님의 [시간]은 성공을 위한 [타이밍]이 아닙니다. 
+중간본문:: 6 오직 그만이 나의 [반석]이시요
 줄바꿈::
 
-중간본문::우리 인생이 에스더처럼 [때를 분별]하게 하시고,  헌신의 때를 놓치지 않게 하소서.
+가운데중간본문::나의 [구원]이시요 나의 [요새]이시니 내가 흔들리지 아니하리로다
+가운데작은본문::-  시편62:5-6(개역개정)
+다음버튼::계속
 
-다음버튼::다음
-
+	
 </div>
-<div class='maincard clearfix' data-bg='http://pgsixt.github.io/10/forest10.jpg'>
+<div class='maincard clearfix'  data-bg='http://pgsixt.github.io/10/readingbook.jpg'>
 
-제목::[더불어] [[이렇게 금식한 후에]]
 
-===
-설명*:: <b class='colyel churchname'>우리 교회 </b>를 위하여 기도합시다.
+제목::[네 번째 기도], [[소망드림]]
 ---
-중간본문:: 에스더는 자신의 [동족]- 유다인들에게 금식기도를 부탁합니다.  자신도 [시녀와 더불어] 금식합니다.
-줄바꿈::
-
-중간본문::우리에게도 함께 기도할 [성도]들이 있고, 더불어 세워져야할 [교회]들이 있습니다.
-줄바꿈::
-
-중간본문::우리가 다른 성도들과 이어져 있음을 깨닫게 하시고, 우리 교회가 이 땅의 교회들과 함께 함을 알게 하소서
-줄바꿈::
-	<h5 class='prayer_text'></h5>
-가운데작은본문::[<b class='colyel churchname'>우리 교회</b>와 코로나로 어려운 교회들을 위해]
-줄바꿈::
-
-다음버튼::다음
-
-</div>
-<div class='maincard clearfix'  data-bg='http://pgsixt.github.io/10/onthemountain10.jpg'>
-
-
-제목::[왕에게] [[나아가리니]]
-
-===
-설명*:: 공적인 책임을 다하는 교회되게 하소서.
+설명*::기도문을 따라 읽습니다.(개인적으로 기도를 하셔도 좋습니다.)
 ---
-중간본문::에스더는 변덕스러운 왕 앞에 나설 수 밖에 없습니다. 공개적인 자리에서 이제 자신을 드러내야 합니다.
+중간본문:: 시험과 입학, 진로를 결정해가는 모든 과정 중에 하나님을 더 알아가게 하시고,
+중간본문:: 취업 또는 대학입학, 또 다른 진로 준비 등의 과정 중에도 함께하실 하나님을 더 기대하길 소망합니다.
+중간본문:: 지금껏 부모 아래 경험했던 하나님의 손길을 기억하며 독립하여 생활할 때에도 하나님을 의식하고 의지하길 소망합니다.
+중간본문:: 초,중,고등학교 시절 억압된 학교 생활 가운데 충분히 발휘되지 못했던 자녀의 은사와 소질들이 열린 공간 가운데서
 줄바꿈::
-
-중간본문::변덕스럽고 냉혹한 시대 속에  교회는 산 위에 있는 마을[[[마태5:14]]]이며 세상에 드러나 있습니다.
-
+중간본문:: 마음껏 피어나길
 줄바꿈::
-
-중간본문::이 땅의 교회와 크리스천들이 빛과 소금의 사명을 감당하게 하시고, [공적인 책임]을 감당하게 하소서. 
-
-중간본문::가장 밝은 곳에서도 부끄러울 것이 없는 교회가 되게 하소서.
-줄바꿈::
-다음버튼::다음
-</div>
-<div class='maincard clearfix' data-bg='http://pgsixt.github.io/10/womanwalking10.jpg'>
-
- 
-제목::[죽으면] [[죽으리라]]
-===
-설명*::간절히 기도하게 하소서
----
-중간본문::모든 유다인들이 죽을 위기에 처하게 되었을때, 에스더도 죽음을 각오하고 나아갑니다.
-줄바꿈::
-
-중간본문::유다인으로 드러날 때의 손해와 규례를 어김으로 인한 위험에도 기꺼이 감당하고자 합니다.
-줄바꿈::
-
-중간본문::죽음을 각오한 에스더의 기도처럼, 우리 또한 기꺼이 손해와 위험을 감수하며 간절하게 기도하게 하소서.
-줄바꿈::
+가운데중간본문::[소망] [합니다.]
 
 
-
-다음버튼::다음
+가운데작은본문:: 주님께서 소망이 되십니다!
+다음버튼::아멘
+	
 
 </div>
 <div class='maincard clearfix'  data-bg='http://pgsixt.github.io/10/nightstar10.jpg'  data-desktop='https://images.unsplash.com/photo-1578039389692-1a498d55df0e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80'>
 
 제목::[기도문], [[스탠리 하우어워스]]
 ===
-설명*::믿음의 사람들의 기도문으로 함께 기도합시다. 아래 기도문을 소리내어 읽습니다.
+설명*::성인이 되는 자녀에게 신앙의 본이 되길 간구하며, 아래 기도문을 소리내어 읽습니다.
 ---
 가운데중간본문::죽음을 주관하시며,
 가운데중간본문::생명을 주시는 주님
@@ -369,12 +350,12 @@
 
 제목::[기다림], [[주님의 뜻을 기다리며]]
 ===
-설명*::주님이 우리에게 주시는 마음이 있는지 살펴봅시다.
-설명*::억지로 생각을 짜내지 않고, 침묵합니다.
-설명*::모든 생각이 주님의 것은 아닙니다. 떠오른 것 중에는 내 생각와 욕구, 할 일도 있습니다. 자연스러운 과정이니 괜찮습니다. 
+설명*::주님이 주시는 평안을 누리시길 바랍니다.
+설명*::침묵함으로 주님께 나아갑시다.
+설명*::주님께 00(자녀 이름)을/를 올려드립니다.
 ---
 
-가운데중간본문::말씀하옵소서.
+가운데중간본문::주님
 가운데큰본문:: [주의 종]이 듣겠나이다
 가운데작은본문::사무엘상 3장 10절
 줄바꿈::
@@ -385,16 +366,16 @@
 </div>
 <div class='maincard clearfix'  data-bg='http://pgsixt.github.io/10/write.jpg'>
 
-제목::[한 줄 기도문], [[마음을 분별하며]]
+제목::[자녀를 위한 기도], [[마음껏 축복하며]]
 ===
-설명*::기도 가운데 떠올린 생각이나 마음, 감사 제목이나 새롭게 드린 기도를 한 줄로 기록합니다.
-설명*::생각난 부분은 다음 기도 시간에 기도하십시오.
+설명*::자녀를 마음껏 축복하며, 개인적인 기도제목을 가지고 기도합니다.
+설명*::자녀에게 편지를 써도 좋습니다.
 
  
 <input type='text' placeholder="내게 주신 마음..." class='oneline' id='ip_confess' />
 <hr class='nonfade'>
 줄바꿈::
-중간본문::억지로 적지 않아도 됩니다. 주님 안에 거한 것으로 충분합니다.
+중간본문::주님께서 부어주신 사랑에 감격하고 또 감사합니다. 
 
 다음버튼::다음
 
@@ -404,11 +385,11 @@
 제목::[감사], [[간구를 들으신 주님께 ]]
 ===
 설명*::기도를 인도하신 주님께 감사를 올려드립니다.
-설명*:: 주님께서 에스더의 기도를 들으셨듯이 우리에게도 응답하십니다.
+설명*:: 주님께서 응답하십니다.
 설명*::아래의 구절을 읽고, 감사를 올려드립니다.
 ---
 
-가운데중간본문::  여호와 우리 하나님이여 
+가운데중간본문:: 여호와 우리 하나님이여 
 가운데중간본문:: 우리를 구원하사 여러 나라로부터 모으시고 
 가운데중간본문:: 우리가 주의 거룩하신 이름을 [감사]하며
 가운데중간본문:: 주의 영예를 [찬양]하게 하소서
@@ -425,11 +406,11 @@
 제목::[파송], [[세상을 향하여 ]]
 ===
 줄바꿈::
-가운데중간본문::오늘의 온라인 기도는 마쳤습니다.
+가운데중간본문::이제 세상으로 나아갑니다. 
 줄바꿈::
-가운데중간본문::주님께서 우리와 함께 하십니다.
+가운데중간본문::하나님을 통해 자녀를 깊이 사랑하게 되고, 자녀를 통해 하나님을 더욱 깊이 경험했던 시간이 되었기를 바랍니다.
 줄바꿈::
-가운데중간본문::주님과 함께 세상으로 나아가시기 바랍니다.
+가운데중간본문::자녀를 축복했던 마음으로, 마주하는 모든 사람을 축복하시기 바랍니다.
 줄바꿈::
 
 줄바꿈::
