--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 <button type="submit"   class="btn btn-warning btn_next float-right" name="button" id='btn_4' data-kill='#if1' onclick='aup.play();' >다음</button>
 
  </div>
-<div class='maincard clearfix'  data-bg='https://images.unsplash.com/photo-1503610594381-aed30c818b8e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1000&q=80'>
+<div class='maincard clearfix'  data-bg='https://images.unsplash.com/photo-1500206329404-5057e0aefa48?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1000&q=80'>
 
 
 
@@ -149,7 +149,7 @@
 
 	
 	 </div>
-<div class='maincard clearfix'  data-bg='http://pgsixt.github.io/10/readingbook.jpg'>
+<div class='maincard clearfix'  data-bg='https://images.unsplash.com/photo-1500206329404-5057e0aefa48?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1000&q=80'>
 
 
 제목::[첫 번째 기도], [[감사드림]]
@@ -240,7 +240,7 @@
 다음버튼::계속
 
 </div>
-<div class='maincard clearfix'  data-bg='http://pgsixt.github.io/10/readingbook.jpg'>
+<div class='maincard clearfix'  data-bg='http://pgsixt.github.io/10/room2.jpg'>
 
 
 제목::[세 번째 기도], [[신뢰드림]]
