--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@
 
 	
 </div>
-<div class='maincard clearfix'  data-bg='http://pgsixt.github.io/10/readingbook.jpg'>
+<div class='maincard clearfix'  data-bg='http://pgsixt.github.io/10/clock1.jpg'>
 
 
 제목::[네 번째 기도], [[소망드림]]
@@ -364,7 +364,7 @@
 다음버튼::다음
 
 </div>
-<div class='maincard clearfix'  data-bg='http://pgsixt.github.io/10/write.jpg'>
+<div class='maincard clearfix'  data-bg='https://images.unsplash.com/photo-1451481454041-104482d8e284?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1000&q=80'>
 
 제목::[자녀를 위한 기도], [[마음껏 축복하며]]
 ===
@@ -401,7 +401,7 @@
 다음버튼::주님, 감사합니다
 
 </div>
-<div class='maincard clearfix'  data-bg='http://pgsixt.github.io/10/sunrise10.jpg'>
+<div class='maincard clearfix'  data-bg='https://images.unsplash.com/photo-1451481454041-104482d8e284?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1000&q=80g'>
 
 제목::[파송], [[세상을 향하여 ]]
 ===
