--- a/index.html
+++ b/index.html
@@ -380,7 +380,7 @@
 다음버튼::다음
 
 </div>
-<div class='maincard clearfix'  data-bg='http://pgsixt.github.io/10/bloom10.jpg'>
+<div class='maincard clearfix'  data-bg='http://pgsixt.github.io/10/carmountain.jpg'>
 
 제목::[감사], [[간구를 들으신 주님께 ]]
 ===
