--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 ---
 줄바꿈::
 
-중간본문::[성령님]께서 우리의 기도를 인도해 주십니다. 도우심을 구하며 기도를 시작합니다.
+중간본문::[성령님]께서 우리의 기도를 인도해 주십니다. [도우심]을 구하며 기도를 시작합니다.
 줄바꿈::
 오른쪽작은본문::준비가 되면, 아래의 [버튼]을 눌러주세요. 
 줄바꿈::
@@ -156,11 +156,10 @@
 ---
 설명*::기도문을 따라 읽습니다.(개인적으로 기도를 하셔도 좋습니다.)
 ---
-중간본문:: 하나님께서 우리에게 선물로 자녀를 주시고, 맡겨주셔서 감사드립니다. 
-중간본문:: 태어나서 지금까지 보호해주시고, 지금까지 인도하셨으며,
+중간본문:: 하나님께서 우리에게 [선물]로 자녀를 주시고, 맡겨주셔서 감사드립니다. 
+중간본문:: 태어나서 지금까지 [보호]해주시고, 지금까지 [인도]하셨으며,
 줄바꿈::
-중간본문:: 12년 간의 학교생활을 통해 독립된 한 사람으로
-중간본문:: 살아갈 수 있는 준비를 하게 하심에 감사합니다. 
+중간본문:: 12년 간의 학교생활을 통해 독립된 한 사람으로 살아갈 수 있는 [준비]를 하게 하심에 감사합니다. 
 줄바꿈::
 중간본문:: 이제 한 주체적인 사람으로서 선택을 하고 책임을 지는 성인이 되는 것에
 줄바꿈::
@@ -184,11 +183,11 @@
 중간본문::2 주께서는 못 하시는 일이 없으시다는 것을, [이제]저는 알았습니다.
 중간본문::주님의 계획은 어김없이 이루어진다는 것도, 저는 [깨달았습니다.]
 줄바꿈::
-중간본문::3 잘 알지도 못하면서, 감히 주님의 뜻을 흐려 놓으려 한 자가 바로 저입니다.
+중간본문::3 잘 알지도 못하면서, 감히 주님의 [뜻]을 흐려 놓으려 한 자가 바로 저입니다.
 중간본문:: 깨닫지도 못하면서, 함부로 말을 하였습니다. 제가 알기에는, 너무나 신기한 일들이었습니다.
 줄바꿈::
 중간본문::4 주께서 말씀하셨습니다. "들어라. 내가 말하겠다. 내가 물을 터이니, 내게 대답하여라" 하셨습니다. 
-중간본문::5 주님이 어떤 분이시라는 것을, 지금까지는 제가 귀로만 들었습니다. 그러나 이제는 제가 제 눈으로 주님을 뵙습니다.
+중간본문::5 주님이 어떤 분이시라는 것을, 지금까지는 제가 [귀]로만 들었습니다. 그러나 이제는 제가 제 [눈]으로 [주님]을 뵙습니다.
 줄바꿈::
 가운데중간본문::[그러므로 저는 제 주장을 거두어 들이고] [[티끌과 잿더미 위에 앉아서 회개합니다.]]
 가운데작은본문::-  욥기42:2-6(새번역)
@@ -202,13 +201,13 @@
 ---
 설명*::기도문을 따라 읽습니다.(개인적으로 기도를 하셔도 좋습니다.)
 ---
-중간본문:: 맡겨주신 자녀를 주님의 교훈과 훈계로 양육하는 일에 부족하고 게을렀습니다. 
-중간본문:: 또한 공부와 성적, 대학과 출세를 하나님보다 중요한 것으로 우상 삼았던 모습을 회개합니다.
+중간본문:: 맡겨주신 자녀를 주님의 [교훈]과 [훈계]로 양육하는 일에 부족하고 게을렀습니다. 
+중간본문:: 또한 공부와 성적, 대학과 출세를 [하나님]보다 중요한 것으로 우상 삼았던 모습을 회개합니다.
 줄바꿈::
-중간본문:: 나의 욕심으로 자녀를 휘둘렀음을, 
-중간본문:: 변화되지 못한 언행으로 자녀에게 믿음의 본을 보여주지 못한 것을 회개합니다. 
+중간본문:: 나의 [욕심]으로 자녀를 휘둘렀음을, 
+중간본문:: 변화되지 못한 언행으로 자녀에게 [믿음의 본]을 보여주지 못한 것을 [회개]합니다. 
 줄바꿈::
-중간본문:: 믿음의 눈으로 세상을 바라보지 못해 자녀에게 불안과 두려움을 전해준 것에 대해
+중간본문:: [믿음의 눈]으로 세상을 바라보지 못해 자녀에게 불안과 두려움을 전해준 것에 대해
 줄바꿈::
 가운데중간본문::[회개] [합니다.]
 
@@ -247,19 +246,18 @@
 ---
 설명*::기도문을 따라 읽습니다.(개인적으로 기도를 하셔도 좋습니다.)
 ---
-중간본문::부족함을 선으로 바꾸시는 하나님을 신뢰합니다. 자녀를 향한 약속을 이루어가실 하나님을 믿습니다. 
-중간본문::부모의 연약함이 남긴 상처를 하나님께서 치유하심을 믿고, 부모의 부족함이 채워주지 못한 것을
-중간본문::다른 사람들과 통로들을 통해 채우셨음을 믿습니다.
-중간본문::자녀들을 이 땅에 보내실 때 주셨던 뜻과 비전을 끝까지 이루어가시는 하나님을 신뢰하며 
+중간본문::부족함을 [선]으로 바꾸시는 하나님을 신뢰합니다. 자녀를 향한 [약속]을 이루어가실 하나님을 믿습니다. 
+중간본문::부모의 연약함이 남긴 상처를 하나님께서 [치유하심]을 믿고, 부모의 부족함이 채워주지 못한 것을
+중간본문::다른 사람들과 통로들을 통해 [채우셨음을 믿습니다.]
+중간본문::자녀들을 이 땅에 보내실 때 주셨던 뜻과 비전을 끝까지 이루어가시는 하나님을 [신뢰]하며 
 줄바꿈::
-중간본문::하나님만이 자녀의 온전한 부모가 되심을
+중간본문::하나님만이 자녀의 [온전한 부모]가 되심을
 줄바꿈::
-가운데중간본문::[신뢰] [합니다.]
+가운데중간본문::[신뢰합니다.]
 
 
 가운데작은본문:: 주님을 신뢰하겠습니다.
 다음버튼::아멘
-
 	
 	
 </div>
@@ -289,17 +287,17 @@
 ---
 설명*::기도문을 따라 읽습니다.(개인적으로 기도를 하셔도 좋습니다.)
 ---
-중간본문:: 시험과 입학, 진로를 결정해가는 모든 과정 중에 하나님을 더 알아가게 하시고,
-중간본문:: 취업 또는 대학입학, 또 다른 진로 준비 등의 과정 중에도 함께하실 하나님을 더 기대하길 소망합니다.
-중간본문:: 지금껏 부모 아래 경험했던 하나님의 손길을 기억하며 독립하여 생활할 때에도 하나님을 의식하고 의지하길 소망합니다.
+중간본문:: 시험과 입학, 진로를 결정해가는 모든 과정 중에 하나님을 더 [알아가게 하시고,]
+중간본문:: 취업 또는 대학입학, 또 다른 진로 준비 등의 과정 중에도 [함께하실] 하나님을 더 기대하길 [소망합니다.]
+중간본문:: 지금껏 부모 아래 경험했던 하나님의 손길을 기억하며 독립하여 생활할 때에도 하나님을 [의식하고 의지하길 소망합니다.]
 중간본문:: 초,중,고등학교 시절 억압된 학교 생활 가운데 충분히 발휘되지 못했던 자녀의 은사와 소질들이 열린 공간 가운데서
 줄바꿈::
 중간본문:: 마음껏 피어나길
 줄바꿈::
-가운데중간본문::[소망] [합니다.]
+가운데중간본문::[소망합니다.]
 
 
-가운데작은본문:: 주님께서 소망이 되십니다!
+가운데작은본문:: 주님께서 [소망]이 되십니다!
 다음버튼::아멘
 	
 
